--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,3 +40,11 @@ a {
 .private {
 	background-color: #CCC;
 }
+
+#ribbon {
+	position: absolute;
+	top: 0;
+	right: 0;
+	border: 0;
+	z-index: 999;
+}
