Major update to use the latest technologies, refactored code and commented a little bit

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,14 @@ a {
 	float: left;
 }
 
+#support-chat #talkto #selected {
+	font-weight: bold;
+}
+
+#support-chat #talkto #everyone {
+	display: none;
+}
+
 #support-chat .private {
 	background-color: #CCC;
 }
